--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "resend": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
